force-app/main/default/objects/Config_Operation_Tab__c/Config_Operation_Tab__c.object-meta.xml
<CustomObject>
    <label>Config Operation Tab</label>
    <nameField>
        <label>Config Operation Tab Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Config Operation Tab</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>