force-app/main/default/objects/Config_Operation_Tab__c/fields/Config_Detail_Editor__c.field-meta.xml
<CustomField>
    <fullName>Config_Detail_Editor__c</fullName>
    <label>Config Detail Editor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ConfigAppRole</valueSetName>
    </valueSet>
</CustomField>